--- a/assets/css/sidenav.css
+++ b/assets/css/sidenav.css
@@ -14,7 +14,7 @@
 .sidenav a {
     padding: 8px 8px 20px 32px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     color: #fff;
     display: block;
     transition: 0.3s;
@@ -22,14 +22,20 @@
 
 .sidenav a:hover {
     color: #fa6f34;
+    text-decoration: underline;
 }
 
 .sidenav .closebtn {
     position: absolute;
-    top: 0;
+    top: 10px;
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
+}
+
+.navbar-logo {
+    padding-right: 25px;
+    padding-bottom: 10px;
 }
 
 @media screen and (max-height: 450px) {
