feat: active navigation for sidebar

--- a/assets/css/sidenav.css
+++ b/assets/css/sidenav.css
@@ -38,6 +38,25 @@
     padding-bottom: 10px;
 }
 
+.nav-tabs {
+    border-bottom: none;
+}
+
+.nav-tabs>li {
+    float: none;
+    margin-bottom: 10px;
+}
+
+.nav-tabs>li>a {
+    margin-right: 0px;
+}
+
+.nav-tabs>li.active>a {
+    color: #fff !important;
+    background-color: #fa6f34 !important;
+    border: 1px solid #fa6f34 !important;
+}
+
 @media screen and (max-height: 450px) {
     .sidenav {
         padding-top: 15px;
